# aoc-any

./: .gitignore  Cargo.toml  tes.txt
.cargo/: config.toml
inputs/: aoc_2022_day08_sparse.txt  day8-test.txt
src/: aoc2022-day8-1.py  get_input.rs  lib.rs  main.rs  template.rs  yr2022_day1.rs  yr2022_day10.rs  yr2022_day11.rs  yr2022_day12.rs  yr2022_day13.rs  yr2022_day14.rs  yr2022_day15.rs  yr2022_day3.rs  yr2022_day4.rs  yr2022_day7.rs  yr2022_day8.rs  yr2022_day9.rs
