[package]
name = "aoc-any"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cli-table = "0.4.7"
fuzzy-matcher = "0.3.7"
itertools = "0.12"
ndarray = { version = "0.15.6", features = ["rayon"] }
once_cell = "1.19.0"
rayon = "1.10.0"
