[package]
name = "aoc-any"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cli-table = "0.4.7"
cookie = "0.18.1"
cookie_store = "0.21.0"
dotenvy = "0.15.7"
fuzzy-matcher = "0.3.7"
gxhash = "3.1.1"
itertools = "0.12"
ndarray = { version = "0.15.6", features = ["rayon"] }
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
ureq = { version = "2.9.6", features = ["cookies"] }
