[package]
name = "aoc-any"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.81"
# chrono = { version = "0.4.38", features = ["serde"] }
cli-table = "0.4.7"
cookie = "0.18.1"
cookie_store = "0.21.0"
dotenvy = "0.15.7"
fuzzy-matcher = "0.3.7"
gxhash = "3.1.1"
indoc = "2.0.5"
itertools = "0.13"
ndarray = { version = "0.15.6", features = ["rayon"] }
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
sscanf = "0.4.1"
tinyvec = { version = "1.6.0", features = ["rustc_1_57"] }
ureq = { version = "2.9.6", features = ["cookies"] }
